fix/aesthetics/ title size on mobile and margin for button

--- a/src/components/books-panel/books-panel.module.scss
+++ b/src/components/books-panel/books-panel.module.scss
@@ -4,6 +4,7 @@
     font-family: "Amatic SC";
     font-weight: 600;
     font-style: normal;
-    font-size: 3.5rem;
+
     text-shadow: #FC0 1px 0 10px;
 }
+
